<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:background="@color/purple_700"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        tools:ignore="MissingConstraints" >

        <TextView
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_time"
            android:textColor="@color/white"
            android:textSize="25sp" />


    </RelativeLayout>

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cost_of_service"
        android:inputType="number"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="102dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        android:textColor="@color/grey"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="147dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <RadioButton
            android:layout_marginStart="15dp"
            android:layout_marginTop="170dp"
            android:text="@string/amazing_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_marginStart="15dp"
            android:text="@string/good_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_marginStart="15dp"
            android:text="@string/ok_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_up_tip"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="314dp"
        tools:ignore="MissingConstraints" />

    <Switch

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="349dp"
        tools:layout_editor_absoluteY="314dp"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="354dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tip Amount"
        android:textColor="@color/grey"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="301dp"
        tools:layout_editor_absoluteY="402dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/thank_draw"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="439dp" />

</androidx.constraintlayout.widget.ConstraintLayout>